fixing progress bar alignment

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -76,26 +76,27 @@ textarea.u-half-height {
     position: fixed;
     max-width: 960px;
     width: 100%;
-    top: 15%;
+    top: 20%;
     opacity: 50%;
     background-color: #f0f0f0;
     margin: 0 auto;
     font-weight: bold;
     z-index: 999;
-    padding: 10px;    /* box-sizing: border-box; */
-    /* text-align: center; */
+    padding: 10px;   
 }
 
 @media (min-width: 400px) {
   .progress-bar-container {
     width: 85%;
-    padding: 0; }
+    padding: 0;
+  }
 }
 
 /* For devices larger than 550px */
 @media (min-width: 550px) {
   .progress-bar-container {
-      width: 80%; }
+      width: 80%;
+  }
 }
 
     
